Fixing deprecated API warning